--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.78.1",
     "react-native-async-storage": "^0.0.1",
+    "react-native-canvas": "^0.1.40",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.4",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
@@ -42,6 +45,7 @@
     "@react-navigation/native": "^7.0.17",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-canvas": "^0.1.14",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
